United StatesChange Country, Oracle Worldwide Web Sites Communities I am a... I want to...
Bug ID: 6692906 CMS: parallel concurrent marking may be prone to hanging or stalling mutators for periods of time
6692906 : CMS: parallel concurrent marking may be prone to hanging or stalling mutators for periods of time

Details
Type:
Bug
Submit Date:
2008-04-23
Status:
Closed
Updated Date:
2012-02-01
Project Name:
JDK
Resolved Date:
2011-03-07
Component:
hotspot
OS:
linux,generic
Sub-Component:
gc
CPU:
x86,generic
Priority:
P3
Resolution:
Fixed
Affected Versions:
hs12,hs20,6u14,7
Fixed Versions:
hs20

Related Reports
Backport:
Backport:
Backport:
Backport:
Backport:
Backport:
Relates:
Relates:

Sub Tasks

Description
The situation is most easily exhibited on, for example, a Huron or Maramba,
where we get a large number of ParallelCMSThreads, using one of the
vm.parallel_class_loading tests.

                                    

Comments
EVALUATION

http://hg.openjdk.java.net/jdk7/hotspot/hotspot/rev/c99c53f07c14
                                     
2010-10-09
SUGGESTED FIX

See URL in Evaluation section for final fix & for backports.
                                     
2010-10-01
EVALUATION

http://hg.openjdk.java.net/jdk7/hotspot-gc/hotspot/rev/c99c53f07c14
                                     
2010-09-30
SUGGESTED FIX

Under review (and more extensive testing):-

http://mykonos.us.oracle.com/net/neeraja.us.oracle.com/export/ysr/starvation/webrev/
                                     
2010-09-18
EVALUATION

See comments section.
                                     
2008-04-23
WORK AROUND

Disable parallel concurrent marking via either:-

  -XX:-CMSConcurrentMTEnabled

OR

  -XX:ParallelCMSThreads=0
                                     
2008-04-23



Hardware and Software, Engineered to Work Together